[package]
name = "poks"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0+"

[dependencies]
crossterm = "0.29.0"
poker = "0.7.0"
color-eyre = "0.6.3"
rand = "0.9.1"
ratatui = "0.29.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
circular-queue = "0.2.7"

[[bin]]
name = "pokst"
path = "src/bins/tui/main.rs"
