[package]
name = "poks"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0+"

[dependencies]
# NOTE: rand needs to be the same version that the poker crate uses
rand = { version = "0.8.5", features = ["std_rng", "std"] }
crossterm = "0.29.0"
poker = "0.7.0"
color-eyre = "0.6.3"
ratatui = "0.29.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
circular-queue = "0.2.7"
thiserror = "2.0.12"

[[bin]]
name = "pokst"
path = "src/bins/tui/main.rs"

[dev-dependencies]
ntest = "0.9.3"
