[package]
name = "poks"
version = "0.1.0"
edition = "2024"
authors = ["Christoph J. Scherr <software@cscherr.de>"]
license = "GPL-3.0-or-later"
description = "Simple local file backups with a bit of compression"
readme = "README.md"
homepage = "https://github.com/PlexSheep/poks"
repository = "https://github.com/PlexSheep/poks"
keywords = ["poker"]
categories = []

[dependencies]
# NOTE: rand needs to be the same version that the poker crate uses
rand = { version = "0.8.5", features = ["std_rng", "std"] }
crossterm = {version ="0.29.0", optional = true}
poker = "0.7.0"
color-eyre = "0.6.3"
ratatui = {version ="0.29.0", optional = true}
tracing = "0.1.41"
tracing-subscriber = {version="0.3.19", optional = true}
circular-queue = "0.2.7"
thiserror = "2.0.12"
clap = { version = "4.5.41", features = ["derive"], optional = true }

[lib]
name = "poksen"

[[bin]]
name = "pokstui"
path = "src/bins/tui/main.rs"
required-features = ["cli", "tui"]

[dev-dependencies]
ntest = "0.9.3"

[features]
default = ["cli", "tui"]
cli = ["dep:clap"]
tui = ["dep:ratatui", "dep:crossterm", "dep:tracing-subscriber", "cli"]
